fix on the display